# sop2atomic

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml
examples/: Atomic_Components_List_v1.xlsx  SOP-44-1-SGSY009-clean.docx  SOP-457-2-UKIPB186-clean.docx
scripts/: manual_run.py
src/sop2atomic/catalogue/: atomic_catalogue_loader.py
src/sop2atomic/cli/: main.py
src/sop2atomic/llm/: llm_client.py  prompt_builder.py  response_interpreter.py
src/sop2atomic/parser/: sop_parser.py
src/sop2atomic/transformers/: sop_to_atomic_transformer.py
src/sop2atomic/utils/: file_utils.py  validators.py
tests/: test_catalogue_loader.py  test_end_to_end.py  test_parser.py  test_prompt_builder.py  test_transformer.py
tests/fixtures/: sample_sop_complex.docx  sample_sop_simple.docx
